[project]
name = "byte-my-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyg-lib>=0.4.0",
    "torch==2.6.0",
    "torch-cluster>=1.6.3",
    "torch-geometric>=2.6.1",
    "torch-scatter>=2.1.2",
    "torch-sparse>=0.6.18",
    "torch-spline-conv>=1.2.2",
    "torchaudio==2.6.0",
    "torchvision==0.21.0",
]
